[tool.poetry]
name = "document-convert"
version = "0.1.0"
description = "use unoconv convert document via HTTP"
authors = ["simple <zhaogang@smart-lifestyle.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
sentry-sdk = {extras = ["flask"], version = "^1.1.0"}
webargs = "^8.0.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
